[package]
name = "rs-pgfs-report"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
chrono = "=0.4.0"
failure = "=0.1.1"
fruently = "=0.10.0"
fs2 = "=0.4.3"
log = "=0.4.1"
log4rs = "=0.8.0"
json-collection = { git = "https://github.com/guangie88/rs-json-collection.git", tag = "v0.1.1" }
postgres = "=0.15.2"
serde = "=1.0.27"
serde_derive = "=1.0.27"
serde-humantime = { git = "https://github.com/tailhook/serde-humantime.git", rev = "f76450e"}
simple_logger = "=0.5.0"
structopt = "=0.2.4"
structopt-derive = "=0.2.4"
toml = "=0.4.5"

[[bin]]
name = "rs-pgfs-report"
path = "src/main.rs"