[package]
name = "rs-pgfs-report"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
failure = "=0.1.1"
fruently = "=0.10.0"
lazy_static = "=1.0.0"
log = "=0.4.1"
mega-coll = { git = "https://github.com/guangie88/rs-mega-coll.git", tag = "v0.3.0" }
postgres = { version = "=0.15.2", features = ["with-native-tls"] }
native-tls = "=0.1.5"
regex = "=0.2.10"
serde = "=1.0.27"
serde_derive = "=1.0.27"
structopt = "=0.2.5"
structopt-derive = "=0.2.5"

[[bin]]
name = "rs-pgfs-report"
path = "src/main.rs"